--- a/src/styles.css
+++ b/src/styles.css
@@ -125,3 +125,25 @@ footer {
   font-size: 14px;
   color: rgba(0, 0, 0, 0.6);
 }
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature {
+  font-size: 13px;
+  text-align: center;
+  color: #000;
+  display: flex;
+  justify-content: center;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
