--- a/src/styles.css
+++ b/src/styles.css
@@ -128,7 +128,8 @@ footer {
 
 .weather-forecast {
   margin-top: 20px;
-  text-align: center;
+  display: flex;
+  justify-content: space-around;
 }
 
 .weather-forecast-date {
