--- a/src/styles.css
+++ b/src/styles.css
@@ -10,17 +10,13 @@ a {
 .weather-app {
   background: white;
   max-width: 600px;
+  width: 200%;
   margin: 45px auto;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   border-radius: 16px;
   padding: 30px;
 }
 
-@media (max-width: 900px) {
-  .weather-app {
-    padding: 80px 20px;
-  }
-}
 header {
   border-bottom: 1px solid #f9f7fe;
   padding: 0 0 30px 0;
